src/test/deca/syntax/valid/test_synt/class/mauvais_ordre.deca
// Description:
//    Test de déclaration de class ou on utulise une methode
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur
//    context: en context il ya une erreur
//
//
// Historique:
//    cree le 20/01/2022

class coordonnees{
    int x = 5;
    int y = 10 + 204;

    int plan(int z){
        return this.x;
    }
}

{
    int k = coords.plan(1);
    coordonnees coords = new coordonnees();
    coords.x = 5;
}