src/test/deca/syntax/invalid/test_synt/class/error_in_method_v1.deca
// Description:
//    Test de déclaration de class ou on utulise une methode
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: erreur dans ident dans le parametre ligne 16, pas de deuxieme parametre
//
//
// Historique:
//    cree le 20/01/2022

class coordonnees{
    int x = 5;
    int y = 10 + 204;

    int plan(int z, int ){
        return this.x;
    }
}

{

    coordonnees coords = new coordonnees();
    int k = coords.plan(1);

    coords.x = 5;
}